@@ -1,3 +1,7 @@
+2004-07-24  Damon Chaplin  <damon@gnome.org>
+
+	* apps.html: added gFLAMEd.
+
 2004-07-12  Damon Chaplin  <damon@gnome.org>
 
 	* apps.html: added RealmForge GDK.
